<resources>
    <string name="app_name">Shared Dream Journal</string>

    <!-- Authentication -->
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_button_text">Login</string>
    <string name="register_hint"><u>Don\'t have an account? Register here</u></string>
    <string name="username_hint">Username</string>
    <string name="password_repeat_hint">Repeat password</string>
    <string name="register_button_text">Register</string>
    <string name="forgot_password_hint"><u>Forgot password?</u></string>
    <string name="reset_password_button_text">Reset password</string>
    <string name="check_email_prompt">Check your e-mail</string>

    <!-- Navigation menu -->
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="menu_home">Home</string>
    <string name="menu_favorites">Favorites</string>
    <string name="edit_dream">Edit dream</string>
    <string name="delete_dream">Delete dream</string>

    <!-- Error messages -->
    <string name="error_generic">Something went wrong, please try again</string>
    <string name="error_network">Something went wrong, check your connection and try again</string>
    <string name="error_required_empty">Required field was left empty</string>
    <string name="error_invalid_username">Invalid username</string>
    <string name="error_invalid_email">Invalid E-Mail</string>
    <string name="error_invalid_password">Invalid password</string>
    <string name="error_used_email">E-Mail already in use</string>
    <string name="error_username_taken">Username is already taken</string>
    <string name="error_password_not_matching">Your password is not matching</string>
    <string name="error_account_does_not_exist">Account does not exist</string>
    <string name="error_wrong_password">Wrong password</string>
</resources>